# coding-challenge-125

./: .gitignore  LICENSE  PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: pyproject.toml  requirements.txt.save  start.sh  uv.toml
apps/backend/src/app/: main.py
apps/backend/src/app/api/routes/: base.py  diff.py  health.py  root.py
apps/backend/src/app/models/dto/: diff_request.py  diff_response.py
apps/backend/tests/: test_diff_api.py  test_myers_diff.py  test_myers_diff_lines_basic.py
apps/frontend/: package.json  tsconfig.node.json
apps/frontend/src/: main.ts
apps/frontend/tests/: DiffManager.test.ts
apps/shared/docs/: ARCHITECTURE.md  PLAN.md  TESTS.md  feat_api_diff_prettyp.md  step1.md
apps/shared/openapi/: codegen-frontend.sh  config-frontend.json
backend/: main.py  requirements.txt
backend/app/: main.py
backend/src/diff/: MyersDiff.py  __init__.py  myers_diff.py  myers_diff_verbose.py
docs/: PLAN.md  diff simplified version.md  diff_forward_only.md  feat_api_diff_prettyp.md  myers_diff.md  step1.md
frontend/: package.json  style.css  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/api/: codegen-frontend.sh
frontend/api/v1/: openapi.yaml
frontend/src/components/: AppHeader.vue  DiffView.vue  SettingsView.vue  TaskItem.vue  TaskListView.vue  Text1View.vue  TextView.vue
frontend/src/composables/: useLocalStorage.ts  useTaskManager.ts
frontend/src/router/: index.ts
frontend/src/tests/: DiffManager.test.ts
frontend/src/types/: validation.ts
frontend/src/views/: DiffManager.vue  (+1 more)
(+27 files in other folders)
