[project]
name = "coding-challenge-125-backend"
version = "1.0.0"
description = "Diff viewer backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "annotated-doc",
  "annotated-types",
  "Pygments",
  "pytest>=8.3.0",
  "black>=24.4.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "black>=24.4.0"]

[project.scripts]
dev = "uv run python -c \"import sys; sys.path.insert(0, 'src'); import uvicorn; uvicorn.run('app.main:app', reload=True, port=8000)\""
test = "uv run python -c \"import sys; sys.path.insert(0, 'src'); import pytest; pytest.main(['tests/', '-v'])\""

[tool.black]
line-length = 88
target-version = ["py311"]
